--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "next": "12.1.4",
+    "privy-js": "^0.0.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
