--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@privy-io/node": "^0.0.2",
     "dotenv": "^16.0.0",
+    "install": "^0.13.0",
     "next": "12.1.4",
+    "npm": "^8.6.0",
     "privy-js": "^0.0.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
