Refresh demo with the latest privy-js changes (#5)
Remove dotenv dependency (switch to built-in Next.js .env.local)
Remove yarn
Bump privy-node and privy-js and update to new methods
Light format and docstring touch-up

--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@privy-io/node": "^0.0.3",
-    "dotenv": "^16.0.0",
+    "@privy-io/node": "^0.0.4",
+    "@privy-io/privy-js": "^0.0.2",
     "install": "^0.13.0",
     "next": "12.1.4",
     "npm": "^8.6.0",
-    "privy-js": "^0.0.6",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
