--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@privy-io/privy-browser": "^0.0.1",
+    "@rainbow-me/rainbowkit": "^0.4.4",
+    "ethers": "^5.6.9",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.5.11"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2"
+    "eslint-config-next": "12.2.2",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   }
 }
