--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^0.5.11"
+    "wagmi": "^0.5.11",
+    "web3": "^1.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
