--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
+  },
+  "solutions": {
+    "got": "^12.1.0"
   }
 }
