--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@privy-io/privy-browser": "^0.0.1",
     "@rainbow-me/rainbowkit": "^0.4.4",
+    "arweave": "^1.11.6",
     "ethers": "^5.6.9",
     "next": "12.2.2",
     "react": "18.2.0",
