--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.8.1",
     "@privy-io/privy-browser": "^0.0.1",
     "@rainbow-me/rainbowkit": "^0.4.4",
     "arweave": "^1.11.6",
+    "bignumber.js": "^9.1.0",
     "ethers": "^5.6.9",
+    "fs": "^0.0.1-security",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
